Implemented Animations for apple collisions. Checks if chicken reaches end fo window.