@@ -1,6 +1,10 @@
+import java.awt.AlphaComposite;
 import java.awt.Color;
 import java.awt.Dimension;
+import java.awt.Font;
 import java.awt.Graphics;
+import java.awt.Graphics2D;
+import java.awt.RenderingHints;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.KeyEvent;
@@ -21,20 +25,17 @@ public class ChickenRunnerController {
 		//Set location of second background image to be on right side of window.
 		this.model.getBgPoint2().x = this.view.getBg2().getWidth(null);
 		
-		this.view.getContentPane().setPreferredSize(new Dimension(model.getFrameWidth(), model.getFrameHeight()));
+		this.view.getContentPane().setPreferredSize(new Dimension(this.model.getFrameWidth(), this.model.getFrameHeight()));
 		this.view.pack();
 		this.view.setLocationRelativeTo(null);
 		
 		this.view.addPanel(new Panel());
 		
-		this.model.setTimer(new Timer(15, new ChickenTimer()));
+		this.model.setTimer(new Timer(this.model.getMainTimerDelay(), new MainTimer()));
 		this.view.addKeyListener(new ChickenKeyListener());
 		
-		this.model.setAppleTimer(new Timer(2000, new AppleSpawner()));
+		this.model.setAppleTimer(new Timer(this.model.getAppleSpawnDelay(), new AppleSpawner()));
 		this.model.getAppleTimer().start();
-		
-		this.model.setMissleTimer(new Timer(5, new MissleMover()));
-		this.model.getMissleTimer().start();
 		
 		this.model.getTimer().start();
 	}
@@ -48,26 +49,46 @@ public class ChickenRunnerController {
 			g.drawImage(view.getBg1(), model.getBgPoint1().x , model.getBgPoint1().y, view.getBg1().getWidth(null), view.getBg1().getHeight(null), null);
 			g.drawImage(view.getBg2(), model.getBgPoint2().x , model.getBgPoint2().y, view.getBg2().getWidth(null), view.getBg1().getHeight(null), null);
 			
-			for (Apple apple: model.getApples()) {
-				g.drawImage(view.getAppleImage(), apple.getPoint().x , apple.getPoint().y, view.getAppleImage().getWidth(null), view.getAppleImage().getHeight(null), null);
-			}
+			drawApple(g);
 			
 			g.drawImage(view.getCurrChickenImage(), model.getChicken().getPoint().x, model.getChicken().getPoint().y, view.getChickenImage().getWidth(null), view.getChickenImage().getHeight(null), null);
 			
 			for (Missle missle: model.getMissles()) {
-				g.setColor(Color.WHITE);
+				g.setColor(Color.RED);
 				g.fillOval(missle.getPoint().x, missle.getPoint().y, missle.getMissleLength(), missle.getMissleLength());
 			}
+			
+			drawScore(g);
+		}
+
+		public void drawScore(Graphics g) {
+			((Graphics2D) g).setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
+			
+			g.setFont(new Font("Monospaced", Font.BOLD, model.getFontSize()));
+			g.setColor(new Color(0, 176, 80));
+			g.drawString("Score " + model.getScore(), model.getScoreX(), model.getScoreY());
+		}
+		
+		public void drawApple(Graphics g) {
+			for (Apple apple: model.getApples()) {
+				((Graphics2D) g).setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER,
+	                    apple.getAlpha()));
+				g.drawImage(view.getAppleImage(), apple.getPoint().x , apple.getPoint().y, view.getAppleImage().getWidth(null), view.getAppleImage().getHeight(null), null);
+			}
+			
+			((Graphics2D) g).setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER,
+                   1.0f));
 		}
 	}
 	
-	class ChickenTimer implements ActionListener {
+	class MainTimer implements ActionListener {
 
 		@Override
 		public void actionPerformed(ActionEvent e) {
 			moveBackground();
 			moveChicken();
 			moveApple();
+			moveMissle();
 			
 			view.repaint();
 		}
@@ -85,7 +106,6 @@ public class ChickenRunnerController {
 			switch (keyCode) { 
         		case KeyEvent.VK_UP:
         			model.getChicken().setMoveUp(true);
-        			System.out.println(model.getApples().size());
         			break;
         		case KeyEvent.VK_LEFT:
         			model.getChicken().setMoveLeft(true);
@@ -132,15 +152,6 @@ public class ChickenRunnerController {
 		}
 	}
 	
-	class MissleMover implements ActionListener {
-
-		@Override
-		public void actionPerformed(ActionEvent e) {
-			moveMissle();
-		}
-		
-	}
-	
 	public void moveBackground() {
 		model.getBgPoint1().x -= model.getBgDx();
 		model.getBgPoint2().x -= model.getBgDx();
@@ -156,11 +167,25 @@ public class ChickenRunnerController {
 	
 	public void moveChicken() {
 		if (model.getChicken().isMoveRight()) {
+			view.switchCurrChickenImage();
+			
+			//Is the user attempting to move the chicken outside the right boundary?
+			if (model.getChicken().getPoint().x >= model.getFrameWidth() - view.getChickenImage().getWidth(null)) {
+				model.getChicken().setMoveRight(false);
+				return;
+			}
+			
 			model.getChicken().moveRight();
-			view.switchCurrChickenImage();
 		} else if (model.getChicken().isMoveLeft()) {
-			model.getChicken().moveLeft();
 			view.switchCurrChickenImage();
+			
+			//Is the user attempting to move the chicken outside of the left boundary?
+			if (model.getChicken().getPoint().x <= 0) {
+				model.getChicken().setMoveLeft(false);
+				return;
+			}
+			
+			model.getChicken().moveLeft();
 		}
 		
 		if (model.getChicken().isMoveUp()) {
@@ -169,9 +194,25 @@ public class ChickenRunnerController {
 	}
 	
 	public void moveApple() {
+		int index = 0;
 		for (Apple apple: model.getApples()) {
 			apple.moveLeft();
 			checkAppleChickenCollision();
+			
+			if (apple.isEaten()) {
+				apple.getPoint().y -= 5;
+				apple.setAlpha(apple.getAlpha() - 0.05f);
+				if (apple.getAlpha() < 0) {
+					model.getApples().remove(index);
+				}
+			}
+			index++;
+		}
+		
+		if (!model.getApples().isEmpty()) {
+			if (model.getApples().get(0).getPoint().x < -1 * view.getAppleImage().getWidth(null)) {
+				model.getApples().remove(0);
+			}
 		}
 	}
 	
@@ -185,29 +226,32 @@ public class ChickenRunnerController {
 			int appleHeight = view.getAppleImage().getHeight(null);
 
 			if (appleChickenDistanceY <= appleHeight && appleChickenDistanceX < appleWidth) {
-				System.out.println("Apple eaten");
-				model.getApples().remove(index);
+				if (!apple.isEaten()) {
+					model.addAppleScore();
+				}
+				model.getApples().get(index).setEaten(true);
 			}
+			
 			index++;
 		}
 	}
 	
 	public void moveMissle() {
 		for (Missle missle: model.getMissles()) {
-			missle.getPoint().x += missle.getXVelocity();
+			missle.moveRight();
 		}
 		
 		if (!model.getMissles().isEmpty()) {
-			if (model.getMissles().getFirst().getPoint().x > model.getFrameWidth()) {
-				model.getMissles().removeFirst();
+			if (model.getMissles().get(0).getPoint().x > model.getFrameWidth()) {
+				model.getMissles().remove(0);
 			}
 		}
 	}
 	
 	public void fireMissle() {
 		int x = model.getChicken().getPoint().x + view.getChickenImage().getWidth(null);
-		int y = model.getChicken().getPoint().y + 30;
+		int y = model.getChicken().getPoint().y + model.getMissleYOffset();
 
-		model.getMissles().addLast(new Missle(x, y));
+		model.getMissles().add(new Missle(x, y));
 	}
 }
